syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

// 회원 가입
message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    int64 status = 1;
    string error = 2;
}

// 로그인
message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    int64 status = 1;
    string error = 2;
    string token = 3;
}

// 토큰 인증
message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
    int64 status = 1;
    string error = 2;
    int64 UserInfoId = 3;
}