syntax = "proto3";

package user;

option go_package = ".;proto";

// https://github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis
import "google/api/annotations.proto";
import "empty.proto";

service Users {
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/user/login"
      body: "*"
    };
  }

  rpc GetProfile (empty.Empty) returns (GetProfileResponse) {
    option (google.api.http) = {
      get: "/v1/user/profile"
    };
  }
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string deviceToken = 3;
}

message LoginResponse {
  string accessToken = 1;
}

message GetProfileResponse {
  string imgPath = 1;
  string name = 2;
  string gender = 3;
  string email = 4;
  string country = 5;
  string lang = 6;
}